--- a/src/main/webapp/app/entities/hitne/hitne.component.html
+++ b/src/main/webapp/app/entities/hitne/hitne.component.html
@@ -9,7 +9,23 @@
             </span>
         </button>
     </h2>
+    <div class="row">
+        <div class="col-sm-12">
+            <form name="searchForm" class="form-inline">
+                <div class="input-group w-100 mt-3">
+                    <input type="text" class="form-control" [(ngModel)]="brojPokretanja" id="brojpokretanja" name="brojpokretanja" placeholder="broj pokretanja">
 
+                    <button class="input-group-append btn btn-info" (click)="searchBrojPokretanja()">
+                        <fa-icon icon="search"></fa-icon>
+                    </button>
+
+                    <button class="input-group-append btn btn-danger" (click)="prazansearch()" >
+                        <fa-icon icon="trash-alt"></fa-icon>
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
     <jhi-alert-error></jhi-alert-error>
 
     <jhi-alert></jhi-alert>
