--- a/src/main/webapp/app/entities/hitne/hitne-update.component.html
+++ b/src/main/webapp/app/entities/hitne/hitne-update.component.html
@@ -5,6 +5,7 @@
 
             <div>
                 <jhi-alert-error></jhi-alert-error>
+                <jhi-alert></jhi-alert>
 
                 <div class="form-group" [hidden]="!editForm.get('id')!.value">
                     <label for="id" jhiTranslate="global.field.id">ID</label>
