--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,4 @@
 <div class="footer">
-    <p jhiTranslate="footer">This is your footer</p>
+    <p >© copyright 2020 by drasko kosovic</p>
 </div>
+
