--- a/src/main/webapp/app/entities/hitne/hitne.component.html
+++ b/src/main/webapp/app/entities/hitne/hitne.component.html
@@ -81,6 +81,11 @@
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
                             </button>
                         </div>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-primary btn-sm"(click)="printReportPokretanje(hitne.brojpokretanja)">Pokretanje</button>
+                            <button type="button" class="btn btn-primary btn-sm"(click)="printReportZahtjev(hitne.brojpokretanja)">Zahtjev</button>
+                            <button type="button" class="btn btn-primary btn-sm"(click)="printReportOdluka(hitne.brojpokretanja)">Odluka</button>
+                        </div>
                     </td>
                 </tr>
             </tbody>
