--- a/src/main/webapp/app/entities/hitne/hitne-update.component.html
+++ b/src/main/webapp/app/entities/hitne/hitne-update.component.html
@@ -116,7 +116,7 @@
             </div>
 
             <div class="btn-group">
-                <button type="button" class="btn btn-danger"(click)="printReportOdluka()">Stampaj sve</button>
+                <button type="button" class="btn btn-danger"(click)="printReportSve()">Stampaj sve</button>
             </div>
             <div class="btn-group">
                 <button type="submit" id="save-entity" [disabled]="editForm.invalid || isSaving" class="btn btn-success">
