init 19 print kraj jos

--- a/src/main/webapp/app/entities/hitne/hitne-update.component.html
+++ b/src/main/webapp/app/entities/hitne/hitne-update.component.html
@@ -109,11 +109,11 @@
 <!--                </button>-->
 
             </div>
-            <div class="btn-group">
-                <button type="button" class="btn btn-primary"(click)="printReportPokretanje()">Pokretanje</button>
-                <button type="button" class="btn btn-primary"(click)="printReportZahtjev()">Zahtjev</button>
-                <button type="button" class="btn btn-primary"(click)="printReportOdluka()">Odluka</button>
-            </div>
+<!--            <div class="btn-group">-->
+<!--                <button type="button" class="btn btn-primary"(click)="printReportPokretanje()">Pokretanje</button>-->
+<!--                <button type="button" class="btn btn-primary"(click)="printReportZahtjev()">Zahtjev</button>-->
+<!--                <button type="button" class="btn btn-primary"(click)="printReportOdluka()">Odluka</button>-->
+<!--            </div>-->
 
             <div class="btn-group">
                 <button type="button" class="btn btn-danger"(click)="printReportSve()">Stampaj sve</button>
