--- a/src/main/webapp/content/scss/vendor.scss
+++ b/src/main/webapp/content/scss/vendor.scss
@@ -6,7 +6,7 @@ eg $input-color: red;
 ****************************/
 // Override Bootstrap variables
 @import 'bootstrap-variables';
+@import '~bootswatch/dist/materia/variables';
 // Import Bootstrap source files from node_modules
 @import '~bootstrap/scss/bootstrap';
-
-/* jhipster-needle-scss-add-vendor JHipster will add new css style */
+@import '~bootswatch/dist/materia/bootswatch';
