--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -1,7 +1,10 @@
 /* ==========================================================================
 Main page styles
 ========================================================================== */
-
+.col-md-9 {
+  width: 347px;
+  height: 737px;
+}
 .hipster {
   display: inline-block;
   width: 347px;
