--- a/src/main/webapp/app/entities/hitne/hitne-update.component.html
+++ b/src/main/webapp/app/entities/hitne/hitne-update.component.html
@@ -1,134 +1,140 @@
-<div class="row justify-content-center">
-    <div class="col-11">
-        <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-            <h2 id="jhi-hitne-heading" jhiTranslate="hitneApp.hitne.home.createOrEditLabel">Create or edit a Hitne</h2>
+<div class="card .bg-light" style="width: 38rem;">
+    <div class="row justify-content-center">
+        <div class="col-11">
+            <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
+                <h2 id="jhi-hitne-heading" jhiTranslate="hitneApp.hitne.home.createOrEditLabel">Create or edit a Hitne</h2>
 
-            <div>
-                <jhi-alert-error></jhi-alert-error>
-                <jhi-alert></jhi-alert>
+                <div>
+                    <jhi-alert-error></jhi-alert-error>
+                    <jhi-alert></jhi-alert>
 
-<!--                <div class="form-group" [hidden]="!editForm.get('id')!.value">-->
-<!--                    <label for="id" jhiTranslate="global.field.id">ID</label>-->
-<!--                    <input type="text" class="form-control" id="id" name="id" formControlName="id" readonly />-->
-<!--                </div>-->
+                    <!--                <div class="form-group" [hidden]="!editForm.get('id')!.value">-->
+                    <!--                    <label for="id" jhiTranslate="global.field.id">ID</label>-->
+                    <!--                    <input type="text" class="form-control" id="id" name="id" formControlName="id" readonly />-->
+                    <!--                </div>-->
 
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="hitneApp.hitne.brojpokretanja" for="field_brojpokretanja">Brojpokretanja</label>
-                    <input type="number" class="form-control" name="brojpokretanja" id="field_brojpokretanja"
-                           formControlName="brojpokretanja"/>
-                    <div *ngIf="editForm.get('brojpokretanja')!.invalid && (editForm.get('brojpokretanja')!.dirty || editForm.get('brojpokretanja')!.touched)">
-                        <small class="form-text text-danger"
-                               *ngIf="editForm.get('brojpokretanja')?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
-                        <small class="form-text text-danger"
-                            [hidden]="!editForm.get('brojpokretanja')?.errors?.number" jhiTranslate="entity.validation.number">
-                            This field should be a number.
-                        </small>
-<!--                        <div class="text-danger" *ngIf="editForm.get('brojpokretanja').invalid && (editForm.get('brojpokretanja').dirty || editForm.get('brojpokretanja').touched)">-->
-<!--                            Username already exists-->
-<!--                        </div>-->
+                    <div class="form-group">
+                        <label class="form-control-label" jhiTranslate="hitneApp.hitne.brojpokretanja" for="field_brojpokretanja">Brojpokretanja</label>
+                        <input type="number" class="form-control" name="brojpokretanja" id="field_brojpokretanja"
+                               formControlName="brojpokretanja"/>
+                        <div *ngIf="editForm.get('brojpokretanja')!.invalid && (editForm.get('brojpokretanja')!.dirty || editForm.get('brojpokretanja')!.touched)">
+                            <small class="form-text text-danger"
+                                   *ngIf="editForm.get('brojpokretanja')?.errors?.required" jhiTranslate="entity.validation.required">
+                                This field is required.
+                            </small>
+                            <small class="form-text text-danger"
+                                   [hidden]="!editForm.get('brojpokretanja')?.errors?.number" jhiTranslate="entity.validation.number">
+                                This field should be a number.
+                            </small>
+                            <!--                        <div class="text-danger" *ngIf="editForm.get('brojpokretanja').invalid && (editForm.get('brojpokretanja').dirty || editForm.get('brojpokretanja').touched)">-->
+                            <!--                            Username already exists-->
+                            <!--                        </div>-->
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="hitneApp.hitne.datumpokretanja" for="field_datumpokretanja">Datumpokretanja</label>
-                    <div class="input-group">
-                        <input id="field_datumpokretanja" type="text" class="form-control" name="datumpokretanja" ngbDatepicker #datumpokretanjaDp="ngbDatepicker" formControlName="datumpokretanja"/>
-                        <span class="input-group-append">
+                    <div class="form-group">
+                        <label class="form-control-label" jhiTranslate="hitneApp.hitne.datumpokretanja" for="field_datumpokretanja">Datumpokretanja</label>
+                        <div class="input-group">
+                            <input id="field_datumpokretanja" type="text" class="form-control" name="datumpokretanja" ngbDatepicker #datumpokretanjaDp="ngbDatepicker" formControlName="datumpokretanja"/>
+                            <span class="input-group-append">
                             <button type="button" class="btn btn-secondary" (click)="datumpokretanjaDp.toggle()"><fa-icon icon="calendar-alt"></fa-icon></button>
                         </span>
+                        </div>
+                        <div *ngIf="editForm.get('datumpokretanja')!.invalid && (editForm.get('datumpokretanja')!.dirty || editForm.get('datumpokretanja')!.touched)">
+                            <small class="form-text text-danger"
+                                   *ngIf="editForm.get('datumpokretanja')?.errors?.required" jhiTranslate="entity.validation.required">
+                                This field is required.
+                            </small>
+                        </div>
                     </div>
-                    <div *ngIf="editForm.get('datumpokretanja')!.invalid && (editForm.get('datumpokretanja')!.dirty || editForm.get('datumpokretanja')!.touched)">
-                        <small class="form-text text-danger"
-                               *ngIf="editForm.get('datumpokretanja')?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
+
+                    <div class="form-group">
+                        <label class="form-control-label" jhiTranslate="hitneApp.hitne.vrijednost" for="field_vrijednost">Vrijednost</label>
+                        <input type="number" class="form-control" name="vrijednost" id="field_vrijednost"
+                               formControlName="vrijednost"/>
+                        <div *ngIf="editForm.get('vrijednost')!.invalid && (editForm.get('vrijednost')!.dirty || editForm.get('vrijednost')!.touched)">
+                            <small class="form-text text-danger"
+                                   *ngIf="editForm.get('vrijednost')?.errors?.required" jhiTranslate="entity.validation.required">
+                                This field is required.
+                            </small>
+                            <small class="form-text text-danger"
+                                   [hidden]="!editForm.get('vrijednost')?.errors?.number" jhiTranslate="entity.validation.number">
+                                This field should be a number.
+                            </small>
+                        </div>
+                    </div>
+
+
+
+                    <div class="form-group">
+                        <label class="form-control-label" jhiTranslate="hitneApp.hitne.ponudjaci" for="field_ponudjaci">Ponudjaci</label>
+                        <select class="form-control" id="field_ponudjaci" name="ponudjaci" formControlName="ponudjaci">
+                            <option [ngValue]="null"></option>
+                            <option [ngValue]="ponudjaciOption.id === editForm.get('ponudjaci')!.value?.id ? editForm.get('ponudjaci')!.value : ponudjaciOption" *ngFor="let ponudjaciOption of ponudjacis; trackBy: trackById">{{ ponudjaciOption.ponudjac }}</option>
+                        </select>
+                        <div *ngIf="editForm.get('ponudjaci')!.invalid && (editForm.get('ponudjaci')!.dirty || editForm.get('ponudjaci')!.touched)">
+                            <small class="form-text text-danger"
+                                   *ngIf="editForm.get('ponudjaci')?.errors?.required" jhiTranslate="entity.validation.required">
+                                This field is required.
+                            </small>
+                        </div>
                     </div>
                 </div>
-
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="hitneApp.hitne.vrijednost" for="field_vrijednost">Vrijednost</label>
-                    <input type="number" class="form-control" name="vrijednost" id="field_vrijednost"
-                           formControlName="vrijednost"/>
-                    <div *ngIf="editForm.get('vrijednost')!.invalid && (editForm.get('vrijednost')!.dirty || editForm.get('vrijednost')!.touched)">
+                    <label class="form-control-label" jhiTranslate="hitneApp.hitne.naziv" >Naziv</label>
+                    <textarea  autosize cols="100" class="form-control" style="width: 300px; height: 30px;" name="naziv" id="field_naziv"
+                               formControlName="naziv"></textarea>
+                    <div *ngIf="editForm.get('naziv')!.invalid && (editForm.get('naziv')!.dirty || editForm.get('naziv')!.touched)">
                         <small class="form-text text-danger"
-                               *ngIf="editForm.get('vrijednost')?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
-                        <small class="form-text text-danger"
-                            [hidden]="!editForm.get('vrijednost')?.errors?.number" jhiTranslate="entity.validation.number">
-                            This field should be a number.
-                        </small>
-                    </div>
-                </div>
-
-
-
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="hitneApp.hitne.ponudjaci" for="field_ponudjaci">Ponudjaci</label>
-                    <select class="form-control" id="field_ponudjaci" name="ponudjaci" formControlName="ponudjaci">
-                        <option [ngValue]="null"></option>
-                        <option [ngValue]="ponudjaciOption.id === editForm.get('ponudjaci')!.value?.id ? editForm.get('ponudjaci')!.value : ponudjaciOption" *ngFor="let ponudjaciOption of ponudjacis; trackBy: trackById">{{ ponudjaciOption.ponudjac }}</option>
-                    </select>
-                    <div *ngIf="editForm.get('ponudjaci')!.invalid && (editForm.get('ponudjaci')!.dirty || editForm.get('ponudjaci')!.touched)">
-                        <small class="form-text text-danger"
-                               *ngIf="editForm.get('ponudjaci')?.errors?.required" jhiTranslate="entity.validation.required">
+                               *ngIf="editForm.get('naziv')?.errors?.required" jhiTranslate="entity.validation.required">
                             This field is required.
                         </small>
-                     </div>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="form-control-label" jhiTranslate="hitneApp.hitne.naziv" >Naziv</label>
-                <textarea  autosize cols="100" class="form-control" name="naziv" id="field_naziv"
-                           formControlName="naziv"></textarea>
-                <div *ngIf="editForm.get('naziv')!.invalid && (editForm.get('naziv')!.dirty || editForm.get('naziv')!.touched)">
-                    <small class="form-text text-danger"
-                           *ngIf="editForm.get('naziv')?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                    </small>
+                <!--            <div>-->
+                <!--                <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">-->
+                <!--                    <fa-icon icon="ban"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>-->
+                <!--                </button>-->
+
+                <!--                <button type="submit" id="save-entity" [disabled]="editForm.invalid || isSaving" class="btn btn-primary">-->
+                <!--                    <fa-icon icon="save"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>-->
+                <!--                </button>-->
+                <!--               <button type="button" class="btn btn-danger" (click)="printReportPokretanje()">Pokretanje</button>-->
+
+                <!--                <button type="button" class="btn btn-warning"(click)="printReportZahtjev()">Zahtjev</button>-->
+                <!--                <button type="button" class="btn btn-success"(click)="printReportOdluka()">Odluka</button>-->
+
+
+                <!--                <button [hidden]="dodaj==false" class="btn btn-primary" (click)="refresh()" >-->
+                <!--                    <fa-icon icon="plus"></fa-icon><span >Dodaj</span>-->
+                <!--                </button>-->
+
+                <!--            </div>-->
+                <!--            <div class="btn-group">-->
+                <!--                <button type="button" class="btn btn-primary"(click)="printReportPokretanje()">Pokretanje</button>-->
+                <!--                <button type="button" class="btn btn-primary"(click)="printReportZahtjev()">Zahtjev</button>-->
+                <!--                <button type="button" class="btn btn-primary"(click)="printReportOdluka()">Odluka</button>-->
+                <!--            </div>-->
+
+                <div class="btn-group">
+                    <button type="button" class="btn btn-danger btn-ms"(click)="printReportSve()">
+                        <fa-icon [icon]="'print'"></fa-icon><span jhiTranslate="entity.action.print">Print</span></button>
                 </div>
-            </div>
-<!--            <div>-->
-<!--                <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">-->
-<!--                    <fa-icon icon="ban"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>-->
-<!--                </button>-->
-
-<!--                <button type="submit" id="save-entity" [disabled]="editForm.invalid || isSaving" class="btn btn-primary">-->
-<!--                    <fa-icon icon="save"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>-->
-<!--                </button>-->
-<!--               <button type="button" class="btn btn-danger" (click)="printReportPokretanje()">Pokretanje</button>-->
-
-<!--                <button type="button" class="btn btn-warning"(click)="printReportZahtjev()">Zahtjev</button>-->
-<!--                <button type="button" class="btn btn-success"(click)="printReportOdluka()">Odluka</button>-->
-
-
-<!--                <button [hidden]="dodaj==false" class="btn btn-primary" (click)="refresh()" >-->
-<!--                    <fa-icon icon="plus"></fa-icon><span >Dodaj</span>-->
-<!--                </button>-->
-
-<!--            </div>-->
-<!--            <div class="btn-group">-->
-<!--                <button type="button" class="btn btn-primary"(click)="printReportPokretanje()">Pokretanje</button>-->
-<!--                <button type="button" class="btn btn-primary"(click)="printReportZahtjev()">Zahtjev</button>-->
-<!--                <button type="button" class="btn btn-primary"(click)="printReportOdluka()">Odluka</button>-->
-<!--            </div>-->
-
-            <div class="btn-group">
-                <button type="button" class="btn btn-danger"(click)="printReportSve()">
-                    <fa-icon [icon]="'print'"></fa-icon><span jhiTranslate="entity.action.print">Print</span></button>
-            </div>
-            <div class="btn-group">
-                <button type="submit" id="save-entity" [disabled]="editForm.invalid || isSaving" class="btn btn-success">
-                    <fa-icon icon="save"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-                </button>
-                <button type="button" id="cancel-save" class="btn btn-warning" (click)="previousState()">
-                    <fa-icon icon="ban"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
-                </button>
-                <button type="button" [disabled]="dodaj==false" class="btn btn-primary" (click)="refresh()">
+                <div class="btn-group ">
+                    <button type="submit" id="save-entity" [disabled]="editForm.invalid || isSaving" class="btn btn-success">
+                        <fa-icon icon="save"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
+                    </button>
+                    <button type="button" id="cancel-save" class="btn btn-warning" (click)="previousState()">
+                        <fa-icon icon="ban"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+                    </button>
+                    <button type="button" [disabled]="dodaj==false" class="btn btn-primary btn-sm" (click)="refresh()">
                         <fa-icon icon="plus"></fa-icon><span jhiTranslate="entity.action.add">Add</span></button>
-            </div>
-        </form>
+                </div>
+            </form>
+        </div>
     </div>
+
+
+
+
 </div>
