--- a/src/main/webapp/app/entities/ponudjaci/ponudjaci-update.component.html
+++ b/src/main/webapp/app/entities/ponudjaci/ponudjaci-update.component.html
@@ -83,7 +83,7 @@
             </div>
 
             <div>
-                <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
+                <button type="button" id="cancel-save" class="btn btn-secondary-sm" (click)="previousState()">
                     <fa-icon icon="ban"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
                 </button>
 
