--- a/src/main/webapp/app/entities/hitne/hitne.component.html
+++ b/src/main/webapp/app/entities/hitne/hitne.component.html
@@ -13,15 +13,15 @@
         <div class="col-sm-12">
             <form name="searchForm" class="form-inline">
                 <div class="input-group w-100 mt-3">
-                    <input type="text" class="form-control" [(ngModel)]="brojPokretanja" id="brojpokretanja" name="brojpokretanja" placeholder="broj pokretanja">
+                    <input type="text" class="form-control" [(ngModel)]="brojPokretanja" id="brojpokretanja" name="brojpokretanja" (keyup)="searchBrojPokretanja()" (keyup.enter)="prazansearch()"  placeholder="broj pokretanja">
 
-                    <button class="input-group-append btn btn-info" (click)="searchBrojPokretanja()">
-                        <fa-icon icon="search"></fa-icon>
-                    </button>
+<!--                    <button class="btn btn-primary btn-sm" (click)="searchBrojPokretanja()">-->
+<!--                        <fa-icon icon="search"></fa-icon>-->
+<!--                    </button>-->
 
-                    <button class="input-group-append btn btn-danger" (click)="prazansearch()" >
-                        <fa-icon icon="trash-alt"></fa-icon>
-                    </button>
+<!--                    <button class="input-group-append btn btn-danger btn-sm" (click)="prazansearch()" >-->
+<!--                        <fa-icon icon="trash-alt"></fa-icon>-->
+<!--                    </button>-->
                 </div>
             </form>
         </div>
